--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <p>Taller general</p>
                     </div>                    
                     <div class="features__item">
-                        <p>sesiones de workshop</p>
+                        <p>Sesiones de workshop</p>
                     </div>                    
                     <div class="features__item">
                         <p>Asesoría personalizada de 1 hr con David Mahbub y Den Távara.</p>
