[UPDATE] new video

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="border--item">
                 </div>
                 <div class="video--item">
-                    <iframe src="https://player.vimeo.com/video/522027634?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Enciende tu idea"></iframe>
+                    <iframe src="https://player.vimeo.com/video/522954847?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Enciente tu idea."></iframe>
                     <!-- <video src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/Eti-landing-assets%2FLanding.mp4?alt=media&token=b9d8deb0-8da6-44a6-91b8-82c398fa653a"  controls autobuffer></video> -->
                     <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </div>
@@ -195,12 +195,12 @@
     </section>
     <section class="tweet">
         <div class="tweet__container">
-            <h1>Taller personalizado, con un grupo pequeño en el cual obtendrás bases sólidas para tu marca o proyecto y su plan estratégico.</h1>
+            <h1>“Separate thinking and execution to execute faster and think better”</h1>
             <img src="./assets/line.svg" alt="">
             <a class="twitter-share-button tweet-styles"
             href="https://twitter.com/intent/tweet"
             data-size="large"
-            data-text="Taller personalizado, con un grupo pequeño en el cual obtendrás bases sólidas para tu marca o proyecto y su plan estratégico."
+            data-text="“Separate thinking and execution to execute faster and think better”"
             data-url="https://enciendetuidea.github.io/"
             data-related="twitterapi,twitter">
             <p>Twittear</p>
