[UPDATE] description noe & text aling initial

--- a/index.html
+++ b/index.html
@@ -166,9 +166,8 @@
                         <img src="./assets//NOE.png" alt="">
                         <h2>Noe Bernacelli</h2>
                         <div class="speaker__item--line"></div>
-                        <p class="speaker__item--description">Diseñador de modas de Alta Costura peruano formado en Italia.</br>
-                            Ha participado en Vancouber Fashion Week y en el Lima Fashion Week.</br>
-                            Se ha presentado en Los Ángeles, China y París.</p>
+                        <p class="speaker__item--description">Diseñador de Moda y director creativo de la marca que lleva su mismo nombre la cual cuenta con 6 líneas de negocio, presenta 2 desfiles privados al año y participa de invitaciones tanto a nivel nacional como internacional representando a la marca Perú.</br>
+                        Presentándose en Prêt-à-Porter de París y en Fashion Week de Los Ángeles.</p>
                         <div class="speaker__sc--container">
                             <a href="https://www.instagram.com/noebernacelli/?hl=es-la" target="_blank">
                                 <img src="./assets/instagram-brands.svg" alt="">
