[UPDATE] image sold out

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#tickets" class="nav-link">Tickets</a>
                     </li>
                 </ul>
-                <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" id="nav-cta" target="_blank"><img class="img__ticket" src="./assets/ticket.svg" alt=""></img>Comprar</a>
+                <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" id="nav-cta" target="_blank"><img class="img__ticket" src="./assets/ticket.svg" alt=""></img>Agotados</a>
                 <div class="burger">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="main-section--item__cta">
                     <div class="cta--container">
-                        <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" href="#" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                        <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" href="#" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                     </div>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                     </div>                     -->
                 </div>
                 <div class="ticket__button--container">
-                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                 </div>  
             </div>
             <div class="tickets__container--item">
@@ -293,7 +293,7 @@
                     </div>                     -->
                 </div>
                 <div class="ticket__button--container">
-                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365"  class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Comprar</a>
+                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365"  class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                 </div>  
             </div>
         </div>
