[UPDATE] pop up

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Marcellus&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="modal" id="modal">
+        <div class="modal__content">
+          <div class="modal__wrapper">
+            <a href="#return" class="modal__close">✕</a>
+            <h1>Boletos agotados 😞</h1>
+            <hr>
+            <p>Manténte atento para conocer las siguientes fechas y no te quedes sin lugar para llevar a cabo tu próximo gran negocio.</p>
+          </div>
+        </div> 
+      </div>
     <header>
         <div class="container">
             <nav class="nav">
@@ -31,7 +41,7 @@
                         <a href="#tickets" class="nav-link">Tickets</a>
                     </li>
                 </ul>
-                <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" id="nav-cta" target="_blank"><img class="img__ticket" src="./assets/ticket.svg" alt=""></img>Agotados</a>
+                <a href="#modal" id="nav-cta" ><img class="img__ticket" src="./assets/ticket.svg" alt=""></img>Agotados</a>
                 <div class="burger">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -64,7 +74,7 @@
                 </div>
                 <div class="main-section--item__cta">
                     <div class="cta--container">
-                        <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" href="#" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
+                        <a href="#modal" class="item--cta" ><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +87,7 @@
                 <div class="border--item">
                 </div>
                 <div class="video--item">
-                    <iframe src="https://player.vimeo.com/video/522954847?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Enciente tu idea."></iframe>
+                    <iframe asycnc src="https://player.vimeo.com/video/522954847?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" loading="lazy" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Enciente tu idea."></iframe>
                     <!-- <video src="https://firebasestorage.googleapis.com/v0/b/wakkamole-61f7d.appspot.com/o/Eti-landing-assets%2FLanding.mp4?alt=media&token=b9d8deb0-8da6-44a6-91b8-82c398fa653a"  controls autobuffer></video> -->
                     <!-- <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcHzPwVB888" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </div>
@@ -261,7 +271,7 @@
                     </div>                     -->
                 </div>
                 <div class="ticket__button--container">
-                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365" class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
+                    <a href="#modal" class="item--cta" ><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                 </div>  
             </div>
             <div class="tickets__container--item">
@@ -293,7 +303,7 @@
                     </div>                     -->
                 </div>
                 <div class="ticket__button--container">
-                    <a href="https://www.joinnus.com/events/cursos-talleres/lima-enciende-tu-idea-42365"  class="item--cta" target="_blank"><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
+                    <a href="#modal" class="item--cta" ><img class="img__ticket" src="./assets/ticket-white.svg" alt=""></img>Agotados</a>
                 </div>  
             </div>
         </div>
